force-app/main/default/objects/Board_Source__mdt/Board_Source__mdt.object-meta.xml
<CustomObject>
    <description>How each source system&apos;s work looks and behaves on the boards: its display label, its accent token, whether it supports start dates, and whether its work rolls up into epics. One record per system. BoardSourceRules is the only class that reads this type; everything else asks BoardSourceRules and receives the answer as data, which is how the client shows a source without ever naming one. Records are in source control and deploy with the code.</description>
    <label>Board Source</label>
    <pluralLabel>Board Sources</pluralLabel>
</CustomObject>