force-app/main/default/objects/Board_Source__mdt/fields/Accent_Token__c.field-meta.xml
<CustomField>
    <fullName>Accent_Token__c</fullName>
    <description>The name of the colour token this source is drawn in, e.g. accent-1 - never a colour value. The shared board stylesheet maps each token to a colour that meets contrast as text and as a stripe; a token it does not know renders neutral. Changing a source&apos;s colour is a stylesheet or Theme panel change, not a metadata change.</description>
    <label>Accent Token</label>
    <length>20</length>
    <type>Text</type>
</CustomField>