force-app/main/default/objects/Board_Source__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>What the boards call this source, on every card and in help text such as &quot;the Jira update runs in the background&quot;. Published to anonymous visitors on the public board since build 08. The client renders it and never compares it: a component that branched on this value would be branching on a vendor.</description>
    <label>Display Label</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>