force-app/main/default/objects/Board_Source__mdt/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <description>The system this record describes, matched against Work_Item__c.External_System__c. A local picklist because custom metadata types cannot use the External_System global value set; the values are kept in step with it by hand, as Field_Mapping__mdt.External_System__c is, and BoardSourceRulesTest asserts they agree.</description>
    <label>External System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>Asana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>