force-app/main/default/objects/Board_Source__mdt/fields/Supports_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Supports_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this source can hold a start date. When false, Apex refuses a start date on the source&apos;s items and the board offers no start date editor - hiding the editor is presentation, the refusal is the rule. Which vendor field holds the date is a separate fact and lives with the adapter, in a Field_Mapping__mdt row of type Field. False by default, so a new source never inherits a capability by accident.</description>
    <label>Supports Start Date</label>
    <type>Checkbox</type>
</CustomField>